Revert "Fixed accordion to not cause scrollbars in IE (#9552)"
Causes extra spacing instead...

This reverts commit 2812830be5f12b77ec894efa38d6de7d099e8b4c

--- a/WebContent/VAADIN/themes/base/accordion/accordion.scss
+++ b/WebContent/VAADIN/themes/base/accordion/accordion.scss
@@ -3,7 +3,7 @@
 .v-accordion {
 	position: relative;
 	outline: none;
-	overflow: visible;
+	overflow: hidden;
 	text-align: left; /* Force default alignment */
 }
 .v-accordion-item {
@@ -11,7 +11,7 @@
 	zoom: 1;
 }
 .v-accordion-item-caption {
-	overflow: visible;
+	overflow: hidden;
 	white-space: nowrap;
 	background: #eee;
 	border-bottom: 1px solid #ddd;
